<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clPokemonContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.pokemondetail.PokemonDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clPokemonDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ivPokemon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@color/black"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvPokeNumberLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/number"
                android:textStyle="bold"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/ivPokemon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tvPokeNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvPokeNumberLabel"
                app:layout_constraintStart_toStartOf="@+id/tvPokeNumberLabel"
                app:layout_constraintEnd_toEndOf="@+id/tvPokeNumberLabel"
                tools:text="100" />

            <TextView
                android:id="@+id/tvPokeNameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/tvPokeNumber"
                app:layout_constraintStart_toStartOf="@+id/tvPokeNumber"
                app:layout_constraintEnd_toEndOf="@+id/tvPokeNumber" />

            <TextView
                android:id="@+id/tvPokeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvPokeNameLabel"
                app:layout_constraintStart_toStartOf="@+id/tvPokeNameLabel"
                app:layout_constraintEnd_toEndOf="@+id/tvPokeNameLabel"
                tools:text="Picachu" />

            <TextView
                android:id="@+id/tvPokeTypeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/type"
                android:textStyle="bold"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/tvPokeName"
                app:layout_constraintStart_toStartOf="@+id/tvPokeName"
                app:layout_constraintEnd_toEndOf="@+id/tvPokeName" />

            <TextView
                android:id="@+id/tvPokeType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvPokeTypeLabel"
                app:layout_constraintStart_toStartOf="@+id/tvPokeTypeLabel"
                app:layout_constraintEnd_toEndOf="@+id/tvPokeTypeLabel"
                tools:text="Electric" />

            <TextView
                android:id="@+id/tvPokeEvolutionsLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/evolves_to"
                android:textStyle="bold"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/tvPokeType"
                app:layout_constraintStart_toStartOf="@+id/tvPokeType"
                app:layout_constraintEnd_toEndOf="@+id/tvPokeType" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPokeEvolutions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tvPokeEvolutionsLabel"
                app:layout_constraintStart_toStartOf="@+id/tvPokeEvolutionsLabel"
                app:layout_constraintEnd_toEndOf="@+id/tvPokeEvolutionsLabel"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/pokemon_evolution_item"
                tools:itemCount="3" />

            <TextView
                android:id="@+id/tvPokeSkillsLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/skills"
                android:textStyle="bold"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/rvPokeEvolutions"
                app:layout_constraintStart_toStartOf="@+id/tvPokeType"
                app:layout_constraintEnd_toEndOf="@+id/tvPokeType" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPokeSkills"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvPokeSkillsLabel"
                app:layout_constraintStart_toStartOf="@+id/tvPokeSkillsLabel"
                app:layout_constraintEnd_toEndOf="@+id/tvPokeSkillsLabel"
                tools:listitem="@layout/pokemon_attacks_item"
                tools:itemCount="2" />

            <TextView
                android:id="@+id/tvPokeAttacksLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/attacks"
                android:textStyle="bold"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/rvPokeSkills"
                app:layout_constraintStart_toStartOf="@+id/rvPokeSkills"
                app:layout_constraintEnd_toEndOf="@+id/rvPokeSkills" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPokeAttacks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvPokeAttacksLabel"
                app:layout_constraintStart_toStartOf="@+id/tvPokeAttacksLabel"
                app:layout_constraintEnd_toEndOf="@+id/tvPokeAttacksLabel"
                tools:listitem="@layout/pokemon_attacks_item"
                tools:itemCount="3"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>